--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   publish = "public"
-  command = "hugo"
+  command = "hugo --minify"
 
 [build.environment]
-  HUGO_VERSION = "0.112.0"
+  HUGO_VERSION = "0.149.0"
 
