--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,26 @@
 [build]
   publish = "public"
-  command = "hugo --minify"
+  command = "hugo"
 
-[build.environment]
-  HUGO_VERSION = "0.149.0"
+# ✅ Security headers
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "strict-origin-when-cross-origin"
+    Strict-Transport-Security = "max-age=31536000; includeSubDomains; preload"
+
+# ✅ Redirect rules (force HTTPS + www → non-www)
+[[redirects]]
+  from = "http://*"
+  to = "https://affiliate-blog.netlify.app/:splat"
+  status = 301
+  force = true
+
+[[redirects]]
+  from = "https://www.affiliate-blog.netlify.app/*"
+  to = "https://affiliate-blog.netlify.app/:splat"
+  status = 301
+  force = true
 
