--- a/netlify.toml
+++ b/netlify.toml
@@ -2,16 +2,19 @@
   publish = "public"
   command = "hugo"
 
-# ✅ Security headers
+[build.environment]
+  HUGO_VERSION = "0.149.0"
+  HUGO_ENV = "production"
+  HUGO_ENABLEGITINFO = "true"
+
 [[headers]]
   for = "/*"
   [headers.values]
-    X-Frame-Options = "DENY"
-    X-Content-Type-Options = "nosniff"
     Referrer-Policy = "strict-origin-when-cross-origin"
     Strict-Transport-Security = "max-age=31536000; includeSubDomains; preload"
+    X-Content-Type-Options = "nosniff"
+    X-Frame-Options = "DENY"
 
-# ✅ Redirect rules (force HTTPS + www → non-www)
 [[redirects]]
   from = "http://*"
   to = "https://affiliate-blog.netlify.app/:splat"
