--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,8 @@
-baseURL = 'http://example.org/'
-languageCode = 'en-us'
-title = 'Smart Gear Reviews'
+baseURL = "https://affiliate-blog.netlify.app/"
+languageCode = "en-us"
+title = "Smart Gear Reviews"
 theme = "hugo-bearblog"
+
+[params]
+  description = "Expert reviews, guides, and top picks for outdoor gear, power stations, and smart home essentials"
+
